--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,14 +2,19 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:cmd="clr-namespace:PathFind.Commands"
+        xmlns:m="clr-namespace:PathFind.Models"
         xmlns:vm="clr-namespace:PathFind.ViewModels"
         xmlns:v="clr-namespace:PathFind.Views"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="548" Width="707">
     <Window.CommandBindings>
         <CommandBinding Command="ApplicationCommands.Open" Executed="OnOpen" />
         <CommandBinding Command="ApplicationCommands.Save" Executed="OnSave" />
         <CommandBinding Command="cmd:MainCommands.Exit" Executed="OnExit" />
     </Window.CommandBindings>
+    <Window.Resources>
+        <m:Map x:Key="map" Dimensions="16,16" />
+        <vm:MapVM x:Key="mapVM" Map="{StaticResource ResourceKey=map}" />
+    </Window.Resources>
     <Grid>
         <Menu Height="23" Name="menu1" VerticalAlignment="Top">
             <MenuItem Header="Map">
@@ -29,11 +34,7 @@
             </MenuItem>
         </Menu>
         <ScrollViewer Name="scrollViewer1" Margin="0,24,0,0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-            <v:MapView x:Name="mapView1" CellSize="32,32">
-                <v:MapView.DataContext>
-                    <vm:MapVM Dimensions="16,16" />
-                </v:MapView.DataContext>
-            </v:MapView>
+            <v:MapView x:Name="mapView1" CellSize="32,32" DataContext="{StaticResource ResourceKey=mapVM}" />
         </ScrollViewer>
     </Grid>
 </Window>
