--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -33,8 +33,8 @@
                 <MenuItem Header="Stop Finding" />
             </MenuItem>
         </Menu>
-        <ScrollViewer Name="scrollViewer1" Margin="0,24,0,0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Background="#FFE5DCDC">
-            <v:MapView x:Name="mapView1" CellSize="32,32" DataContext="{StaticResource ResourceKey=mapVM}" />
+        <ScrollViewer Name="scrollViewer1" Margin="0,24,0,0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Background="Gainsboro">
+            <v:MapView x:Name="mapView1" CellSize="32,32" DataContext="{StaticResource ResourceKey=mapVM}" SelectedCellBrush="#FFC6D1F5" />
         </ScrollViewer>
     </Grid>
 </Window>
