--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,15 +9,20 @@
     <Window.CommandBindings>
         <CommandBinding Command="ApplicationCommands.Open" Executed="OnOpen" />
         <CommandBinding Command="ApplicationCommands.Save" Executed="OnSave" />
+        <CommandBinding Command="ApplicationCommands.New" Executed="OnNew" />
         <CommandBinding Command="cmd:MainCommands.Exit" Executed="OnExit" />
     </Window.CommandBindings>
     <Window.Resources>
         <m:Map x:Key="map" Dimensions="16,16" />
         <vm:MapVM x:Key="mapVM" Map="{StaticResource ResourceKey=map}" CellSize="32,32" />
     </Window.Resources>
+    <Window.DataContext>
+        <StaticResource ResourceKey="map"/>
+    </Window.DataContext>
     <Grid>
         <Menu Height="23" Name="menu1" VerticalAlignment="Top">
             <MenuItem Header="Map">
+                <MenuItem Header="New" Command="ApplicationCommands.New" />
                 <MenuItem Header="Open" Command="ApplicationCommands.Open" />
                 <MenuItem Header="Save" Command="ApplicationCommands.Save" />
                 <Separator />
@@ -34,7 +39,20 @@
             </MenuItem>
         </Menu>
         <ScrollViewer Name="scrollViewer1" Margin="0,24,0,0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Background="Gainsboro">
-            <v:MapView x:Name="mapView1" DataContext="{StaticResource ResourceKey=mapVM}" SelectedCellBrush="#FFC6D1F5" Width="{Binding Path=ViewWidth}" Height="{Binding Path=ViewHeight}" />
+            <v:MapView x:Name="mapView1" DataContext="{Binding Source={StaticResource mapVM}}" SelectedCellBrush="#FFEBEBEB" Width="{Binding Path=ViewWidth}" Height="{Binding Path=ViewHeight}">
+                <v:MapView.StartCellBrush>
+                    <RadialGradientBrush>
+                        <GradientStop Color="#FF17B117" Offset="0" />
+                        <GradientStop Color="DarkGreen" Offset="1" />
+                    </RadialGradientBrush>
+                </v:MapView.StartCellBrush>
+                <v:MapView.GoalCellBrush>
+                    <RadialGradientBrush>
+                        <GradientStop Color="#FFF84646" Offset="0" />
+                        <GradientStop Color="DarkRed" Offset="1" />
+                    </RadialGradientBrush>
+                </v:MapView.GoalCellBrush>
+            </v:MapView>
         </ScrollViewer>
     </Grid>
 </Window>
