--- a/App/MainWindow.xaml
+++ b/App/MainWindow.xaml
@@ -17,7 +17,11 @@
       <StaticResource ResourceKey="mainWindowVM"/>
     </Window.DataContext>
     <Grid>
-        <Menu Height="23" Name="menu1" VerticalAlignment="Top">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Menu Name="menu1" VerticalAlignment="Top">
             <MenuItem Header="Map">
                 <MenuItem Header="New" Command="{Binding Path=NewCommand}" />
                 <MenuItem Header="Open" Command="{Binding Path=OpenCommand}" />
@@ -30,8 +34,8 @@
                 <MenuItem Header="Stop Finding" Command="{Binding Path=MapVM.StopPathingCommand}" />
             </MenuItem>
         </Menu>
-        <ScrollViewer Name="scrollViewer1" Margin="0,24,0,0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Background="Gainsboro">
-            <v:MapView x:Name="mapView1" DataContext="{Binding Path=MapVM}" SelectedCellBrush="#FFEBEBEB" RowCount="{Binding Path=Map.RowCount}" ColumnCount="{Binding Path=Map.ColumnCount}" Width="{Binding RelativeSource={RelativeSource Self}, Path=ViewWidth}" Height="{Binding RelativeSource={RelativeSource Self}, Path=ViewHeight}">
+        <ScrollViewer Name="scrollViewer1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Background="Gainsboro" Grid.Row="1">
+            <v:MapView x:Name="mapView1" DataContext="{Binding Path=MapVM}" SelectedCellBrush="#FFEBEBEB" RowCount="{Binding Path=Map.RowCount}" ColumnCount="{Binding Path=Map.ColumnCount}" Width="{Binding RelativeSource={RelativeSource Self}, Path=ViewWidth}" Height="{Binding RelativeSource={RelativeSource Self}, Path=ViewHeight}" SnapsToDevicePixels="True" GridLineBrush="Gainsboro">
                 <v:MapView.StartCellBrush>
                     <RadialGradientBrush>
                         <GradientStop Color="#FF17B117" Offset="0" />
