--- a/App/MainWindow.xaml
+++ b/App/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:m="clr-namespace:PathFind.Models"
         xmlns:vm="clr-namespace:PathFind.ViewModels"
         xmlns:v="clr-namespace:PathFind.Views"
-        Title="MainWindow" Height="620" Width="700">
+        Title="PathFinder" Height="620" Width="700">
     <Window.CommandBindings>
         <CommandBinding Command="cmd:MainCommands.Exit" Executed="OnExit" />
     </Window.CommandBindings>
@@ -18,7 +18,8 @@
     </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" Name="MenuRow" />
+            <RowDefinition Height="Auto" Name="ToolbarRow" />
             <RowDefinition />
         </Grid.RowDefinitions>
         <Menu Name="menu1" VerticalAlignment="Top">
@@ -34,7 +35,7 @@
                 <MenuItem Header="Stop Finding" Command="{Binding Path=MapVM.StopPathingCommand}" />
             </MenuItem>
         </Menu>
-        <ScrollViewer Name="scrollViewer1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Background="Gainsboro" Grid.Row="1">
+        <ScrollViewer Name="scrollViewer1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Background="Gainsboro" Grid.Row="2">
             <v:MapView x:Name="mapView1" DataContext="{Binding Path=MapVM}" SelectedCellBrush="#FFEBEBEB" RowCount="{Binding Path=Map.RowCount}" ColumnCount="{Binding Path=Map.ColumnCount}" Width="{Binding RelativeSource={RelativeSource Self}, Path=ViewWidth}" Height="{Binding RelativeSource={RelativeSource Self}, Path=ViewHeight}" SnapsToDevicePixels="True" GridLineBrush="Gainsboro" SelectedCells="{Binding Path=SelectedCells}">
                 <v:MapView.StartCellBrush>
                     <RadialGradientBrush>
@@ -50,5 +51,11 @@
                 </v:MapView.GoalCellBrush>
             </v:MapView>
         </ScrollViewer>
+        <ToolBarTray Height="26" Name="toolBarTray1" VerticalAlignment="Top" Grid.Row="1">
+            <ToolBar Height="26" HorizontalAlignment="Left" Name="pathToolBar" VerticalAlignment="Top" Width="200">
+                <Button Content="Start Pathing" Name="button1" Width="75" Command="{Binding Path=MapVM.StartPathingCommand}" />
+                <Button Content="Stop Pathing" Name="button2" Width="75" Command="{Binding Path=MapVM.StopPathingCommand}" />
+            </ToolBar>
+        </ToolBarTray>
     </Grid>
 </Window>
