--- a/App/MainWindow.xaml
+++ b/App/MainWindow.xaml
@@ -11,6 +11,14 @@
     </Window.CommandBindings>
     <Window.Resources>
         <m:Map x:Key="map" RowCount="16" ColumnCount="16" />
+        <RadialGradientBrush x:Key="goalCellBrush">
+            <GradientStop Color="#FFF84646" Offset="0" />
+            <GradientStop Color="DarkRed" Offset="1" />
+        </RadialGradientBrush>
+        <RadialGradientBrush x:Key="startCellBrush">
+            <GradientStop Color="#FF17B117" Offset="0" />
+            <GradientStop Color="DarkGreen" Offset="1" />
+        </RadialGradientBrush>
         <vm:MainWindowVM x:Key="mainWindowVM" Map="{StaticResource ResourceKey=map}" />
     </Window.Resources>
     <Window.DataContext>
@@ -36,19 +44,7 @@
             </MenuItem>
         </Menu>
         <ScrollViewer Name="scrollViewer1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Background="Gainsboro" Grid.Row="2">
-            <v:MapView x:Name="mapView1" DataContext="{Binding Path=MapVM}" SelectedCellBrush="#FFEBEBEB" RowCount="{Binding Path=Map.RowCount}" ColumnCount="{Binding Path=Map.ColumnCount}" Width="{Binding RelativeSource={RelativeSource Self}, Path=ViewWidth}" Height="{Binding RelativeSource={RelativeSource Self}, Path=ViewHeight}" SnapsToDevicePixels="True" GridLineBrush="Gainsboro" SelectedCells="{Binding Path=SelectedCells}">
-                <v:MapView.StartCellBrush>
-                    <RadialGradientBrush>
-                        <GradientStop Color="#FF17B117" Offset="0" />
-                        <GradientStop Color="DarkGreen" Offset="1" />
-                    </RadialGradientBrush>
-                </v:MapView.StartCellBrush>
-                <v:MapView.GoalCellBrush>
-                    <RadialGradientBrush>
-                        <GradientStop Color="#FFF84646" Offset="0" />
-                        <GradientStop Color="DarkRed" Offset="1" />
-                    </RadialGradientBrush>
-                </v:MapView.GoalCellBrush>
+            <v:MapView x:Name="mapView1" DataContext="{Binding Path=MapVM}" SelectedCellBrush="{Binding Path=SelectedCellBrush}" RowCount="{Binding Path=Map.RowCount}" ColumnCount="{Binding Path=Map.ColumnCount}" Width="{Binding RelativeSource={RelativeSource Self}, Path=ViewWidth}" Height="{Binding RelativeSource={RelativeSource Self}, Path=ViewHeight}" SnapsToDevicePixels="True" GridLineBrush="Gainsboro" SelectedCells="{Binding Path=SelectedCells}" StartCellBrush="{Binding Path=StartCellBrush}" GoalCellBrush="{Binding Path=GoalCellBrush}">
             </v:MapView>
         </ScrollViewer>
         <ToolBarTray Height="26" Name="toolBarTray1" VerticalAlignment="Top" Grid.Row="1">
