--- a/App/MainWindow.xaml
+++ b/App/MainWindow.xaml
@@ -48,7 +48,14 @@
             </v:MapView>
         </ScrollViewer>
         <ToolBarTray Height="26" Name="toolBarTray1" VerticalAlignment="Top" Grid.Row="1">
-            <ToolBar Height="26" HorizontalAlignment="Left" Name="pathToolBar" VerticalAlignment="Top" Width="200">
+            <ToolBar Height="26" HorizontalAlignment="Left" Name="pathToolBar" VerticalAlignment="Center" Width="350">
+                <ComboBox HorizontalAlignment="Left" Name="comboBox1" VerticalAlignment="Top" Width="120" ItemsSource="{Binding Path=PathingAlgorithms}" SelectedItem="{Binding Path=SelectedPathingAlgorithm}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=Name}"></TextBlock>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
                 <Button Content="Start Pathing" Name="button1" Width="75" Command="{Binding Path=MapVM.StartPathingCommand}" />
                 <Button Content="Stop Pathing" Name="button2" Width="75" Command="{Binding Path=MapVM.StopPathingCommand}" />
             </ToolBar>
