--- a/App/MainWindow.xaml
+++ b/App/MainWindow.xaml
@@ -49,7 +49,7 @@
         </ScrollViewer>
         <ToolBarTray Height="26" Name="toolBarTray1" VerticalAlignment="Top" Grid.Row="1">
             <ToolBar Height="26" HorizontalAlignment="Left" Name="pathToolBar" VerticalAlignment="Center" Width="350">
-                <ComboBox HorizontalAlignment="Left" Name="comboBox1" VerticalAlignment="Top" Width="120" ItemsSource="{Binding Path=PathingAlgorithms}" SelectedItem="{Binding Path=SelectedPathingAlgorithm}">
+                <ComboBox HorizontalAlignment="Left" Name="comboBox1" VerticalAlignment="Top" Width="120" ItemsSource="{Binding Path=MapVM.PathingAlgorithms}" SelectedItem="{Binding Path=MapVM.SelectedPathingAlgorithm}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Path=Name}"></TextBlock>
