Added a zoom control in the bottom right corner of the main window, controlling a temporary property named CellSizeScalar which wraps CellSize

--- a/App/MainWindow.xaml
+++ b/App/MainWindow.xaml
@@ -30,6 +30,7 @@
             <RowDefinition Height="Auto" Name="MenuRow" />
             <RowDefinition Height="Auto" Name="ToolbarRow" />
             <RowDefinition />
+            <RowDefinition Height="Auto" Name="StatusBarRow" />
         </Grid.RowDefinitions>
         <Menu Name="menu1" VerticalAlignment="Top">
             <MenuItem Header="Map">
@@ -50,7 +51,7 @@
         </ScrollViewer>
         <ToolBarTray Height="26" Name="toolBarTray1" VerticalAlignment="Top" Grid.Row="1">
             <ToolBar Height="26" HorizontalAlignment="Left" Name="pathToolBar" VerticalAlignment="Center" Width="350">
-                <ComboBox HorizontalAlignment="Left" Name="comboBox1" VerticalAlignment="Top" Width="150" ItemsSource="{Binding Path=MapVM.PathingAlgorithms}" SelectedItem="{Binding Path=MapVM.SelectedPathingAlgorithm}">
+                <ComboBox HorizontalAlignment="Left" Name="comboBox1" VerticalAlignment="Top" Width="150" ItemsSource="{Binding Path=MapVM.PathingAlgorithms}" SelectedItem="{Binding Path=MapVM.SelectedPathingAlgorithm}" IsEnabled="{Binding Path=MapVM.CanStartPathing}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Converter={StaticResource displayNameConverter}}"></TextBlock>
@@ -61,5 +62,8 @@
                 <Button Content="Stop Pathing" Name="button2" Width="75" Command="{Binding Path=StopPathingCommand}" />
             </ToolBar>
         </ToolBarTray>
+        <StatusBar Grid.Row="3" Height="24" Name="statusBar1" VerticalAlignment="Stretch" Margin="0,0,226,0" />
+        <Slider Grid.Row="3" Height="24" Name="slider1" VerticalAlignment="Center" Value="{Binding Path=MapVM.CellSizeScalar}" Minimum="4" Maximum="50" Margin="0,2" HorizontalAlignment="Right" Width="171" />
+        <Label Content="Zoom" Grid.Row="3" Height="24" Margin="0,0,172,4" Name="label1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="43" />
     </Grid>
 </Window>
