Moved DrawGrid method from MapView to MapCanvas

--- a/App/Views/MapView.xaml
+++ b/App/Views/MapView.xaml
@@ -13,7 +13,7 @@
     </ItemsControl.ItemTemplate>
     <ItemsControl.ItemsPanel>
         <ItemsPanelTemplate>
-            <v:MapCanvas />
+            <v:MapCanvas GridLineBrush="Gainsboro" />
         </ItemsPanelTemplate>
     </ItemsControl.ItemsPanel>
 </ItemsControl>
