Added an IsBlocked property to CellVM and a DataTrigger to the item template to color the cell black only if this is true

--- a/App/Views/MapView.xaml
+++ b/App/Views/MapView.xaml
@@ -8,7 +8,12 @@
              d:DesignHeight="300" d:DesignWidth="300" DataContextChanged="ItemsControl_DataContextChanged">
     <ItemsControl.ItemTemplate>
         <DataTemplate>
-            <Rectangle Fill="Black"></Rectangle>
+            <Rectangle x:Name="cellBody"></Rectangle>
+            <DataTemplate.Triggers>
+                <DataTrigger Binding="{Binding Path=IsBlocked}" Value="True">
+                    <Setter TargetName="cellBody" Property="Fill" Value="Black" />
+                </DataTrigger>
+            </DataTemplate.Triggers>
         </DataTemplate>
     </ItemsControl.ItemTemplate>
     <ItemsControl.ItemsPanel>
