--- a/App/Views/MapView.xaml
+++ b/App/Views/MapView.xaml
@@ -13,6 +13,14 @@
                 <DataTrigger Binding="{Binding Path=IsBlocked}" Value="True">
                     <Setter TargetName="cellBody" Property="Fill" Value="Black" />
                 </DataTrigger>
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding Path=IsGoal}" Value="False" />
+                        <Condition Binding="{Binding Path=IsStart}" Value="False" />
+                        <Condition Binding="{Binding Path=IsOnPath}" Value="True" />
+                    </MultiDataTrigger.Conditions>
+                    <Setter TargetName="cellBody" Property="Fill" Value="MediumSeaGreen" />
+                </MultiDataTrigger>
             </DataTemplate.Triggers>
         </DataTemplate>
     </ItemsControl.ItemTemplate>
