Draw start and goal cells using item template
Make sure that the start and goal cells always have a view model in
the collection. Add a data trigger to set the cell color to green
for the start and red for the goal.

--- a/App/Views/MapView.xaml
+++ b/App/Views/MapView.xaml
@@ -21,6 +21,12 @@
                     </MultiDataTrigger.Conditions>
                     <Setter TargetName="cellBody" Property="Fill" Value="MediumSeaGreen" />
                 </MultiDataTrigger>
+                <DataTrigger Binding="{Binding Path=IsGoal}" Value="True">
+                    <Setter TargetName="cellBody" Property="Fill" Value="Red" />
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Path=IsStart}" Value="True">
+                    <Setter TargetName="cellBody" Property="Fill" Value="Green" />
+                </DataTrigger>
             </DataTemplate.Triggers>
         </DataTemplate>
     </ItemsControl.Resources>
