Draw in-progress pathing cells using a XAML data template
A previous submission created cell view models when cell "colors"
are set. Fire property-change notifications when the cell "color"
changes. Fixes #1, #4.

--- a/App/Views/MapView.xaml
+++ b/App/Views/MapView.xaml
@@ -27,6 +27,22 @@
                 <DataTrigger Binding="{Binding Path=IsStart}" Value="True">
                     <Setter TargetName="cellBody" Property="Fill" Value="Green" />
                 </DataTrigger>
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding Path=IsGoal}" Value="False" />
+                        <Condition Binding="{Binding Path=IsStart}" Value="False" />
+                        <Condition Binding="{Binding Path=IsInOpenList}" Value="True" />
+                    </MultiDataTrigger.Conditions>
+                    <Setter TargetName="cellBody" Property="Fill" Value="Orange" />
+                </MultiDataTrigger>
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding Path=IsGoal}" Value="False" />
+                        <Condition Binding="{Binding Path=IsStart}" Value="False" />
+                        <Condition Binding="{Binding Path=IsInClosedList}" Value="True" />
+                    </MultiDataTrigger.Conditions>
+                    <Setter TargetName="cellBody" Property="Fill" Value="Gray" />
+                </MultiDataTrigger>
             </DataTemplate.Triggers>
         </DataTemplate>
     </ItemsControl.Resources>
