--- a/App/MainWindow.xaml
+++ b/App/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:m="clr-namespace:PathFind.Models"
         xmlns:vm="clr-namespace:PathFind.ViewModels"
         xmlns:v="clr-namespace:PathFind.Views"
-        Title="PathFinder" Height="620" Width="700" Loaded="Window_Loaded">
+        Title="PathSampler" Height="620" Width="700" Loaded="Window_Loaded">
     <Window.CommandBindings>
         <CommandBinding Command="cmd:MainCommands.Exit" Executed="OnExit" />
     </Window.CommandBindings>
