--- a/App/App.xaml
+++ b/App/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="PathFind.App"
+﻿<Application x:Class="PathSampler.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
