--- a/App/Views/MapView.xaml
+++ b/App/Views/MapView.xaml
@@ -1,9 +1,9 @@
-﻿<ItemsControl x:Class="PathFind.Views.MapView"
+﻿<ItemsControl x:Class="PathSampler.Views.MapView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:v="clr-namespace:PathFind.Views"
+             xmlns:v="clr-namespace:PathSampler.Views"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" DataContextChanged="ItemsControl_DataContextChanged">
     <ItemsControl.Resources>
